# Optiver-realized-volatility-prediction-kaggle21

./: .gitignore  README.md  main.py
notebooks/: handy-experiments.ipynb  optiver-realized-eda-xgb-baseline-infer.ipynb  optiver-realized-eda-xgb-baseline-train.ipynb  orvp-dae-1dcnn-train-pipeline.ipynb  orvp-data-creation-pipeline-cv-folds.ipynb  orvp-lgbm-features-baseline.ipynb  orvp-lgbm-infer.ipynb  orvp-lgbm-optuna-optimization-fe-base-pipeline.ipynb  orvp-lgbm-train-pipeline.ipynb  orvp-master-inference.ipynb  orvp-model-pipeline-cv-folds.ipynb  orvp-more-features-boosting-lgbm-infer.ipynb  orvp-more-features-boosting-lgbm-pipeline.ipynb  orvp-nn-stock-embedding-train-pipeline.ipynb  orvp-pipeline.ipynb  orvp-tabnet-train-pipeline.ipynb  orvp-xgb-inference.ipynb  orvp-xgb-train-pipeline.ipynb  public-ensemble-nn-lgbm.ipynb  stock-embedding-my-features.ipynb
orvp/: README.md  __init__.py  config.py  setup.cfg
orvp/dataset/: create_data.py
orvp/modeling/: lgb_models.py
orvp/utils/: feature_utils.py  metric_utils.py  order_book_features.py  trade_features.py
src/: config.py
src/modeling/: lgb_models.py  xgb_models.py
src/utils/: feature_utils.py  metric_utils.py  order_book_features.py  trade_features.py
