[metadata]
name = orvp
version = 0.0.1
author = Mrutyunjay Biswal
author_email = mrutyunjay.tutulu1021@gmail.com
description = For Optiver Realized Volatility Prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mrutyunjay01/Optiver-realized-volatility-prediction-kaggle21/tree/main/src
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True